// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JSONReporter.activity 1`] = `
Object {
  "stderr": "",
  "stdout": "{\\"type\\":\\"activityStart\\",\\"data\\":{\\"id\\":0}}
{\\"type\\":\\"activityTick\\",\\"data\\":{\\"id\\":0,\\"name\\":\\"foo\\"}}
{\\"type\\":\\"activityTick\\",\\"data\\":{\\"id\\":0,\\"name\\":\\"bar\\"}}
{\\"type\\":\\"activityEnd\\",\\"data\\":{\\"id\\":0}}",
}
`;

exports[`JSONReporter.activity 2`] = `
Object {
  "stderr": "",
  "stdout": "",
}
`;

exports[`JSONReporter.command 1`] = `
Object {
  "stderr": "",
  "stdout": "{\\"type\\":\\"command\\",\\"data\\":\\"foobar\\"}",
}
`;

exports[`JSONReporter.error 1`] = `
Object {
  "stderr": "{\\"type\\":\\"error\\",\\"data\\":\\"foobar\\"}",
  "stdout": "",
}
`;

exports[`JSONReporter.footer 1`] = `
Object {
  "stderr": "",
  "stdout": "{\\"type\\":\\"finished\\",\\"data\\":0}",
}
`;

exports[`JSONReporter.info 1`] = `
Object {
  "stderr": "",
  "stdout": "{\\"type\\":\\"info\\",\\"data\\":\\"foobar\\"}",
}
`;

exports[`JSONReporter.log 1`] = `
Object {
  "stderr": "",
  "stdout": "{\\"type\\":\\"log\\",\\"data\\":\\"foobar\\"}",
}
`;

exports[`JSONReporter.progress 1`] = `
Object {
  "stderr": "",
  "stdout": "{\\"type\\":\\"progressStart\\",\\"data\\":{\\"id\\":0,\\"total\\":2}}
{\\"type\\":\\"progressTick\\",\\"data\\":{\\"id\\":0,\\"current\\":1}}
{\\"type\\":\\"progressTick\\",\\"data\\":{\\"id\\":0,\\"current\\":2}}
{\\"type\\":\\"progressFinish\\",\\"data\\":{\\"id\\":0}}",
}
`;

exports[`JSONReporter.progress 2`] = `
Object {
  "stderr": "",
  "stdout": "",
}
`;

exports[`JSONReporter.step 1`] = `
Object {
  "stderr": "",
  "stdout": "{\\"type\\":\\"step\\",\\"data\\":{\\"message\\":\\"foobar\\",\\"current\\":1,\\"total\\":5}}",
}
`;

exports[`JSONReporter.success 1`] = `
Object {
  "stderr": "",
  "stdout": "{\\"type\\":\\"success\\",\\"data\\":\\"foobar\\"}",
}
`;

exports[`JSONReporter.warn 1`] = `
Object {
  "stderr": "{\\"type\\":\\"warning\\",\\"data\\":\\"foobar\\"}",
  "stdout": "",
}
`;
